@@ -48,6 +48,7 @@ of the test content:</p>
 <ul>
 <li><a href="sunspider-0.9/driver.html">Version 0.9</a></li>
 <li><a href="sunspider-0.9.1/driver.html">Version 0.9.1</a></li>
+<li><a href="sunspider-1.0/driver.html">Version 1.0</a></li>
 </ul>
 
 </body>
